# KOK_ENGINE

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fast_run.sh  gui.s  mimic_intro  notes.txt  quick_git.sh  test1  test2  test3
KOK_ANGEL/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
KOK_ANGEL/angel_script/sdk/angelscript/lib/: libangelscript.so.2.33.0
KOK_ANGEL/src/: as_config.h  scriptarray.h  scriptbuilder.h  scripthandle.h  scriptstdstring.h
KOK_CORE/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
KOK_CORE/src/: KOK_Actor.h  KOK_Controller.h  KOK_Message.cpp  KOK_Message.h  KOK_VisualDebug.h
KOK_EXTENDS/src/: KOK_EXT_CharacterBasic.cpp  KOK_EXT_CharacterBasic.h
KOK_GRAPHICS/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
KOK_GRAPHICS/src/: Camera.cpp  Camera.h  KOK_Blok.h  KOK_Camera.cpp  KOK_Camera.h  KOK_Director.cpp  KOK_Director.h  KOK_Imager.cpp  KOK_Imager.h  KOK_Light.cpp  KOK_Light.h  KOK_Mesh.cpp  KOK_Mesh.h  KOK_Model.cpp  KOK_Model.h  KOK_ParticleSystem.cpp  KOK_ParticleSystem.h  KOK_Picker.cpp  KOK_Picker.h  KOK_Skeleton.cpp  KOK_Skeleton.h  KOK_TextConsole.cpp  KOK_TextConsole.h  KOK_TextManager.cpp  KOK_TextManager.h  KOK_WindowManager.cpp  KOK_WindowManager.h  shader.cpp  shader.h
KOK_PHYSICS/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
KOK_PHYSICS/src/: KOK_PhysicsCharacter.h  KOK_PhysicsContext.cpp  KOK_PhysicsContext.h
Models/: char.blend  char.blend1  sharky.dae  sharky.fbx  sharky.x
Models/knight/: Idle.fbx  Walking.fbx
Models/sphere0/default/: .directory
Models/spider0/default/: Mesh_0.json
Scripts/: playerInit.as  playerUpdate.as  test.as
Scripts/HeaderModules/: playerHeaderModule.as
Shaders/: cubeFragment.fs  cubeVertex.vs  defaultFragment.fs  defaultVertex.vs  deferredShader.fs  deferredShader.vs  flat.fs  flat.vs  flatShader.fs  hud.fs  hud.vs  hudImage.fs  instanceFragment.fs  instanceVertex.vs  particleShader.fs  particleShader.vs  passThrough.vs  pp_lights.fs  pp_ssao.fs  quad.fs  quad.vs  shadowDraw.fs  shadowDraw.vs  skinnedTransform.glsl  spaghetti.fs  text.fs  text.vs
Shaders/.alg_meta/: skinnedTransform.glsl
Shaders/ImageProcess/: brightThreshold.glsl  copyCompute.glsl  imageAdditive.glsl  imageBlur.glsl  imageBlurH.glsl  imageBlurV.glsl
Shaders/ImageProcess/.alg_meta/: brightThreshold.glsl  copyCompute.glsl  imageAdditive.glsl  imageBlur.glsl  imageBlurH.glsl  imageBlurV.glsl
Textures/: sketchMap.xcf
Textures/CubeMaps/Field/: irradiance_negx.tga  irradiance_negy.tga  irradiance_negz.tga  irradiance_posx.tga  irradiance_posy.tga  irradiance_posz.tga  radiance_negx_0_256x256.tga  radiance_negx_1_128x128.tga  radiance_negx_2_64x64.tga  radiance_negx_3_32x32.tga  radiance_negx_4_16x16.tga  radiance_negx_5_8x8.tga  radiance_negx_6_4x4.tga  radiance_negy_0_256x256.tga  radiance_negy_1_128x128.tga  radiance_negy_2_64x64.tga  radiance_negy_3_32x32.tga  radiance_negy_4_16x16.tga  radiance_negy_5_8x8.tga  radiance_negy_6_4x4.tga  radiance_negz_0_256x256.tga  radiance_negz_1_128x128.tga  radiance_negz_2_64x64.tga  radiance_negz_3_32x32.tga  radiance_negz_4_16x16.tga  radiance_negz_5_8x8.tga  radiance_negz_6_4x4.tga  radiance_posx_0_256x256.tga  radiance_posx_1_128x128.tga  radiance_posx_2_64x64.tga  radiance_posx_3_32x32.tga  radiance_posx_4_16x16.tga  radiance_posx_5_8x8.tga  radiance_posx_6_4x4.tga  radiance_posy_0_256x256.tga  radiance_posy_1_128x128.tga  radiance_posy_2_64x64.tga  radiance_posy_3_32x32.tga  radiance_posy_4_16x16.tga  radiance_posy_5_8x8.tga  (+14 more)
tests/: animation_viewer.cpp  gui.cpp  skeltalTest_main.cpp
tests/ASM_COMPARE/: a.out  matrix.cpp  matrix.s
